Fixed mobile alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  text-align: center;
 }
 
 .title h1 {
@@ -77,6 +78,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  text-align: center;
 }
 
 .subTitle h4 {
